Fix Java 8 compatibility, null safety, and image content validation in LocalFileStorageService